--- a/0.3/time/hello.html
+++ b/0.3/time/hello.html
@@ -33,7 +33,7 @@
                         </script>
                         <gcse:searchbox-only></gcse:searchbox-only>
                     </div>
-                    <select id="version-select"><option value="0.3" selected>v0.3</option>,<option value="0.4" >v0.4</option></select>
+                    <select id="version-select"><option value="0.3" selected>v0.3</option></select>
 					<a href="https://github.com/minnojs">Github</a>
 				</nav>
 			</section>
